hphp/test/zend/good/Zend/tests/traits/bugs/case-sensitive.php.expectf

Fatal error: Method 'M1' declared in multiple traits in %s/case-sensitive.php on line 14
